javali_tests/A3/A4_keinestamSchmid/fail/Error.2.3.23.MISSINGRETURN.3.javali
//2.3.23
//MISSING RETURN

class Main {
	int i;
	void a(){
	return 9;
	}
	
	void main() {
		i = a();

	}
}